src/css/story/intro.styl
.intro
	margin 0 auto
	padding 2rem 1rem 3rem 1rem
	text-align center
	order 1
	pointer-events all

	&__hed
		max-width 60rem
		margin 0 auto
		text-align center
		font-weight bold
		font-family $national
		display flex 
		flex-direction column
		&--welcome
			set-type-size('medium')
			line-height 115%
			weight 400
			letter-spacing 1.25em
			text-transform uppercase
		&--name 
			font-size 96px
			line-height 115%
			

	
	&__dek
		max-width $column-width
		margin 0 auto
		margin-top 1rem
	
	.sig
		max-width $column-width
		margin 0 auto
		margin-top 1rem
		text-align center
		font-style italic 
		a
			font-style normal
	
	&__time
		display block
		max-width $column-width
		margin 0 auto
		text-align center
		set-type-size('medium')
		font-family $national
		line-height 115%
		text-transform uppercase 


	&__text 
		max-width $column-width
		margin 3rem auto 0

	.prose--big 
		padding 0 1rem
		margin 0 auto
		set-type-size('x-large')

